Dashboard: fix jumping effect on hover over knowledge chart

--- a/src/TrueOrFalse.Frontend.Web/Views/Knowledge/Knowledge.less
+++ b/src/TrueOrFalse.Frontend.Web/Views/Knowledge/Knowledge.less
@@ -106,3 +106,8 @@ h1 {
         -webkit-transform: scale(1.0);
     }
 }
+
+.chartKnowledgePContainer {
+    height:250px;
+}
+
